[gd_scene load_steps=11 format=3 uid="uid://bfkhrkr8dhaa0"]

[ext_resource type="Script" path="res://Game Logic/object/crop/crop.gd" id="1_fb3xx"]
[ext_resource type="Script" path="res://Game Logic/object/plant_appearance.gd" id="2_clcwc"]
[ext_resource type="PackedScene" uid="uid://ddc1ksqr6pedu" path="res://Scenes/objects/plants/plant_component.tscn" id="3_35gvl"]
[ext_resource type="Script" path="res://Game Logic/object/interaction_hitbox.gd" id="4_j1w5e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_aoqua"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5kbd0"]
load_path = "res://.godot/imported/cabbot.png-48190009479f573dbf31f9a002a57a21.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_80e6e"]
atlas = SubResource("CompressedTexture2D_5kbd0")
region = Rect2(66.1933, 114.47, 45.293, 46.6096)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_5h8sg"]
load_path = "res://.godot/imported/cabbot.png-48190009479f573dbf31f9a002a57a21.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_6m0np"]
atlas = SubResource("CompressedTexture2D_5h8sg")
region = Rect2(67.2142, 120.71, 43.4497, 36.8664)

[sub_resource type="CircleShape2D" id="CircleShape2D_0mxl1"]
radius = 29.0689

[node name="GenericCrop" type="Area2D"]
y_sort_enabled = true
script = ExtResource("1_fb3xx")

[node name="StepCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_aoqua")

[node name="PlantAppearance" type="Node2D" parent="."]
script = ExtResource("2_clcwc")
growth_stage_textures = Array[Texture2D]([SubResource("AtlasTexture_80e6e")])

[node name="Sprite2D" type="Sprite2D" parent="PlantAppearance"]
y_sort_enabled = true
texture = SubResource("AtlasTexture_6m0np")

[node name="PlantComponent" parent="." instance=ExtResource("3_35gvl")]
growth_stage_minutes = Array[int]([1000000])
current_growth_stage = 1

[node name="InteractionHitbox" type="RigidBody2D" parent="."]
script = ExtResource("4_j1w5e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionHitbox"]
shape = SubResource("CircleShape2D_0mxl1")
